Rebrand all covers

--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@ jobs_url:
                 <div class="col-sm-12 col-lg-6">
                     <div class="techtrends">
                         <div class="techtrends-image">
-                            <a id="tt-link-conteneurs" href="//info.wescale.fr/cloudradar-finops" title="Cloud Radar FinOps" target="_blank"><img src="{{"/images/cover-finops.png"|
+                            <a id="tt-link-conteneurs" href="//info.wescale.fr/cloudradar-finops" title="Cloud Radar FinOps" target="_blank"><img src="{{"/images/radar/CloudRadar-FINOPS.png"|
                                 relative_url }}" alt="CloudRadar FinOps" /></a>
                         </div>
                         <div class="techtrends-text">
-                            <h2>CloudRadar FinOps</h2>
+                            <h2>FinOps</h2>
                             <p>
                                La connaissance fine des modèles de facturation des fournisseurs et des possibilités
                                 offertes par l’automatisation permet d’optimiser la consommation de ressources Cloud.
@@ -185,18 +185,18 @@ jobs_url:
               <div class="col-sm-12 col-lg-6">
                     <div class="techtrends">
                         <div class="techtrends-image">
-                            <a id="tt-link-conteneurs" href="//info.wescale.fr/cloudradar-finops" title="Cloud Radar FinOps" target="_blank"><img src="{{"/images/cover-finops.png"|
-                                relative_url }}" alt="CloudRadar CloudNative" /></a>
+                            <a id="tt-link-conteneurs" href="//info.wescale.fr/cloudradar-cloudnative" title="Cloud Radar Cloud Native" target="_blank"><img src="{{"/images/radar/CloudRadar-CLOUDNATIVE.png"|
+                                relative_url }}" alt="CloudRadar Cloud Native" /></a>
                         </div>
                         <div class="techtrends-text">
-                            <h2>CloudRadar CloudNative</h2>
+                            <h2>Cloud Native</h2>
                             <p>
-                               Texte .....detoinzifn eibzgnntintninnyinhitninhitynhity !
-                                froiitghihrightirhrigh iufh uifnr oojj,, pk,tgiuin ,!
+                               Le guide définitif du Cloud Native pour le comprendre, construire son IT Cloud Native et
+                                grandir dans ce nouvel ordre mondial.
                                 <br/>
-                                Mais alors, comment adopter le cloud Native  ?
+                                Adoptez la démarche !
                             </p>
-                            <p class="news-readmore"><a class="job-button button-sm" href="//info.wescale.fr/cloudradar-finops" title="Télécharger le CloudRadar CloudNative" target="_blank">Télécharger</a>
+                            <p class="news-readmore"><a class="job-button button-sm" href="//info.wescale.fr/cloudradar-cloudnative" title="Télécharger le CloudRadar CloudNative" target="_blank">Télécharger</a>
                             </p>
                         </div>
                     </div>
@@ -207,8 +207,8 @@ jobs_url:
                 <div class="col-sm-12 col-lg-6">
                     <div class="techtrends">
                         <div class="techtrends-image">
-                            <a id="tt-link-conteneurs" href="//info.wescale.fr/techtrends-conteneurs" title="CloudRadar Conteneurs" target="_blank"><img src="{{"/images/couverture-tt-conteneurs-3.png"|
-                                relative_url }}" alt="Techtrends Conteneurs" /></a>
+                            <a id="tt-link-conteneurs" href="//info.wescale.fr/cloudradar-conteneurs" title="CloudRadar Conteneurs" target="_blank"><img src="{{"/images/radar/CloudRadar-CONTENEUR.png"|
+                                relative_url }}" alt="CoudRadar Conteneurs" /></a>
                         </div>
                         <div class="techtrends-text">
                             <h2>Conteneurs</h2>
@@ -219,7 +219,7 @@ jobs_url:
                                 conteneurisée avec les bons outils. Pour finir, le chapitre <b>Exploiter</b> vous aide à
                                 faire vivre la plateforme conteneurisée.
                             </p>
-                            <p class="news-readmore"><a class="job-button button-sm" href="//info.wescale.fr/techtrends-conteneurs" title="Télécharger le CloudRadar Conteneurs" target="_blank">Télécharger</a>
+                            <p class="news-readmore"><a class="job-button button-sm" href="//info.wescale.fr/cloudradar-conteneurs" title="Télécharger le CloudRadar Conteneurs" target="_blank">Télécharger</a>
                             </p>
                         </div>
                     </div>
@@ -227,7 +227,7 @@ jobs_url:
                 <div class="col-sm-12 col-lg-6">
                     <div class="techtrends">
                         <div class="techtrends-image">
-                            <a id="tt-link-cloud" href="//info.wescale.fr/techtrends-cloud" title="Techtrends Cloud" target="_blank"><img src="{{"/images/techtrends-cloud-3.png"|
+                            <a id="tt-link-cloud" href="//info.wescale.fr/cloudradar-cloud" title="Techtrends Cloud" target="_blank"><img src="{{"/images/radar/CloudRadar-CLOUD.png"|
                                 relative_url }}" alt="Techtrends Cloud" /></a>
                         </div>
                         <div class="techtrends-text">
@@ -242,7 +242,7 @@ jobs_url:
                                 multiplient en conséquence. Les décideurs sont confrontés à des choix stratégiques et
                                 technologiques
                                 difficiles.</p>
-                            <p class="news-readmore"><a class="job-button button-sm" href="//info.wescale.fr/techtrends-cloud" title="Télécharger le Techtrends Cloud" target="_blank">Télécharger</a>
+                            <p class="news-readmore"><a class="job-button button-sm" href="//info.wescale.fr/cloudradar-cloud" title="Télécharger le CloudRadar Migration Cloud" target="_blank">Télécharger</a>
                             </p>
                         </div>
                     </div>
