--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ jobs_url:
                         <div class="techtrends-text">
                             <h2>Cloud Native</h2>
                             <p>
-                               Le guide définitif du Cloud Native pour le comprendre, construire son IT Cloud Native et
+                               Le guide définitif du Cloud Native pour le comprendre, construire son SI Cloud Native et
                                 grandir dans ce nouvel ordre mondial.
                                 <br/>
                                 Adoptez la démarche !
