--- a/formations.html
+++ b/formations.html
@@ -3,21 +3,6 @@ layout: default
 title: Formations - Wescale - Improve Together
 class: formations
 push-date:
-    - link: "/formations/Formation-Kubernetes.html"
-      img: "/images/formations/kubernetes.png"
-      title: "Formation Kubernetes"
-      fulltitle: "Formation Kubernetes : 22 et 23 Octobre 2020 Paris"
-      short: "Formation Kubernetes avancée 2 jours"
-      badge-up: "22 <span>et</span> 23"
-      badge-down: "Octobre<br/>2020"
-
-    - link: "/formations/Formation-Git-pour-les-Ops.html"
-      img: "/images/formations/git-pour-les-ops.png"
-      title: "Git pour les Ops"
-      fulltitle: "Formation Git pour les Ops : 30 Octobre 2020 Paris"
-      short: "Formation Git pour les Ops 1 jour"
-      badge-up: "30"
-      badge-down: "Octobre<br/>2020"
 
     - link: "/formations/Formation-Docker-Kubernetes.html"
       img: "/images/formations/docker-kubernetes.png"
@@ -50,6 +35,22 @@ push-date:
       short: "Formation XL Release 2 jours"
       badge-up: "24 <span>et</span> 25"
       badge-down: "Novembre<br/>2020"
+
+    - link: "/formations/Formation-Kubernetes-avancee.html"
+      img: "/images/formations/kubernetes-avancee-blue.png"
+      title: "Formation Kubernetes avancée"
+      fulltitle: "Formation Kubernetes : 26 et 27 Novembre 2020 Paris"
+      short: "Formation Kubernetes avancée 2 jours"
+      badge-up: "26 <span>et</span> 27"
+      badge-down: "Novembre<br/>2020"
+
+    - link: "/formations/Formation-Ansible.html"
+      img: "/images/formations/ansible.png"
+      title: "Découvrir et maîtriser Ansible pour la production"
+      fulltitle: "Formation Ansible : 3 et 4 Décembre 2020 Paris"
+      short: "Formation Ansible 2 jours"
+      badge-up: "3 <span>et</span> 4"
+      badge-down: "Décembre<br/>2020"
 
 ---
 
