Add Cloud Radar Native part 2

--- a/index.html
+++ b/index.html
@@ -162,6 +162,27 @@ jobs_url:
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-sm-12 col-lg-6 col-lg-offset-3">
+                    <div class="techtrends">
+                        <div class="techtrends-image">
+                            <a id="tt-link-conteneurs" href="//info.wescale.fr/cloudradar-cloudnative" title="Cloud Radar Cloud Native Partie 2" target="_blank"><img src="{{"/images/radar/CloudRadar-CLOUDNATIVE.png"|
+                                relative_url }}" alt="CloudRadar Cloud Native Partie 2" /></a>
+                        </div>
+                        <div class="techtrends-text">
+                            <h2>Cloud Native Partie 2</h2>
+                            <p>
+                               Dans la partie 2 de ce guide du Cloud Native, découvrez les recettes essentiels pour construire son SI Cloud Native.
+                                En adoptant les bonnes solutions, d'infrastructures, d'architecture et de développement.
+                                <br/>
+                                Construisez Cloud Native !
+                            </p>
+                            <p class="news-readmore"><a class="job-button button-sm" href="//info.wescale.fr/cloudradar-cloudnative-2" title="Télécharger le CloudRadar CloudNative Partie 2" target="_blank">Télécharger</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
           <div class="row">
                 <div class="col-sm-12 col-lg-6">
                     <div class="techtrends">
@@ -185,18 +206,18 @@ jobs_url:
               <div class="col-sm-12 col-lg-6">
                     <div class="techtrends">
                         <div class="techtrends-image">
-                            <a id="tt-link-conteneurs" href="//info.wescale.fr/cloudradar-cloudnative" title="Cloud Radar Cloud Native" target="_blank"><img src="{{"/images/radar/CloudRadar-CLOUDNATIVE.png"|
-                                relative_url }}" alt="CloudRadar Cloud Native" /></a>
+                            <a id="tt-link-conteneurs" href="//info.wescale.fr/cloudradar-cloudnative-1" title="Cloud Radar Cloud Native Partie 1" target="_blank"><img src="{{"/images/radar/CloudRadar-CLOUDNATIVE.png"|
+                                relative_url }}" alt="CloudRadar Cloud Native Partie 1" /></a>
                         </div>
                         <div class="techtrends-text">
-                            <h2>Cloud Native</h2>
+                            <h2>Cloud Native Partie 1</h2>
                             <p>
                                Le guide définitif du Cloud Native pour le comprendre, construire son SI Cloud Native et
                                 grandir dans ce nouvel ordre mondial.
                                 <br/>
-                                Adoptez la démarche !
+                                Dans cette première partie, nous vous aidons à comprendre le Cloud Native, son modèle de maturité, et ses facteurs clés !
                             </p>
-                            <p class="news-readmore"><a class="job-button button-sm" href="//info.wescale.fr/cloudradar-cloudnative" title="Télécharger le CloudRadar CloudNative" target="_blank">Télécharger</a>
+                            <p class="news-readmore"><a class="job-button button-sm" href="//info.wescale.fr/cloudradar-cloudnative-1" title="Télécharger le CloudRadar CloudNative partie 1Ë" target="_blank">Télécharger</a>
                             </p>
                         </div>
                     </div>
