--- a/formations.html
+++ b/formations.html
@@ -4,30 +4,6 @@ title: Formations - Wescale - Improve Together
 class: formations
 push-date:
 
-    - link: "/formations/Formation-Docker-Kubernetes.html"
-      img: "/images/formations/docker-kubernetes.png"
-      title: "Docker Kubernetes"
-      fulltitle: "Formation Docker Kubernetes : 4 au 6 Novembre 2020 Paris"
-      short: "Formation Docker Kubernetes 3 jours"
-      badge-up: "4 <span>et</span> 6"
-      badge-down: "Novembre<br/>2020"
-
-    - link: "/formations/Formation-XL-Deploy.html"
-      img: "/images/formations/xl-deploy.png"
-      title: "XL Deploy"
-      fulltitle: "Formation XL Deploy : 16 au 18 Novembre 2020 Paris"
-      short: "Formation XL Deploy 3 jours"
-      badge-up: "16 <span>au</span> 18"
-      badge-down: "Novembre<br/>2020"
-
-    - link: "/formations/Formation-Terraform.html"
-      img: "/images/formations/terraform.png"
-      title: "Terraform"
-      fulltitle: "Formation Terraform : 19 et 20 Novembre 2020 Paris"
-      short: "Formation Terraform 2 jours"
-      badge-up: "19 <span>et</span> 20"
-      badge-down: "Novembre<br/>2020"
-
     - link: "/formations/Formation-XL-Release.html"
       img: "/images/formations/xl-release.png"
       title: "XL Release"
@@ -50,6 +26,30 @@ push-date:
       fulltitle: "Formation Ansible : 3 et 4 Décembre 2020 Paris"
       short: "Formation Ansible 2 jours"
       badge-up: "3 <span>et</span> 4"
+      badge-down: "Décembre<br/>2020"
+
+    - link: "/formations/Formation-XL-Deploy.html"
+      img: "/images/formations/xl-deploy.png"
+      title: "XL Deploy"
+      fulltitle: "Formation XL Deploy : 8 et 10 Décembre 2020 Paris"
+      short: "Formation XL Deploy 3 jours"
+      badge-up: "8 <span>au</span> 10"
+      badge-down: "Décembre<br/>2020"
+
+    - link: "/formations/Formation-Tech-for-PM.html"
+      img: "/images/formations/techforpm.png"
+      title: "Tech for PM"
+      fulltitle: "Formation Tech for PM : 10 et 11 Décembre 2020 Paris"
+      short: "Formation Tech for PM 2 jours"
+      badge-up: "10 <span>et</span> 11"
+      badge-down: "Décembre<br/>2020"
+
+    - link: "/formations/Formation-Devsecops.html"
+      img: "/images/formations/devsecops.png"
+      title: "Devsecops"
+      fulltitle: "Formation Devsecops : 17 et 18 Décembre 2020 Paris"
+      short: "Formation Devsecops 2 jours"
+      badge-up: "17 <span>et</span> 18"
       badge-down: "Décembre<br/>2020"
 
 ---
