--- a/formations.html
+++ b/formations.html
@@ -4,53 +4,53 @@ title: Formations - Wescale - Improve Together
 class: formations
 push-date:
 
-    - link: "/formations/Formation-XL-Release.html"
-      img: "/images/formations/xl-release.png"
-      title: "XL Release"
-      fulltitle: "Formation XL Release : 24 et 25 Novembre 2020 Paris"
-      short: "Formation XL Release 2 jours"
-      badge-up: "24 <span>et</span> 25"
-      badge-down: "Novembre<br/>2020"
+    - link: "/formations/Formation-Devsecops.html"
+      img: "/images/formations/devsecops.png"
+      title: "Devsecops"
+      fulltitle: "Formation Devsecops : 1 et 2 Février 2021 Paris"
+      short: "Formation Devsecops 2 jours"
+      badge-up: "1 <span>et</span> 2"
+      badge-down: "Février<br/>2021"
 
-    - link: "/formations/Formation-Kubernetes-avancee.html"
-      img: "/images/formations/kubernetes-advanced.png"
-      title: "Formation Kubernetes avancée"
-      fulltitle: "Formation Kubernetes : 26 et 27 Novembre 2020 Paris"
+    - link: "/formations/Formation-Kubernetes.html"
+      img: "/images/formations/kubernetes.png"
+      title: "Formation Kubernetes"
+      fulltitle: "Formation Kubernetes : 3 et 4 Février 2021 Paris"
       short: "Formation Kubernetes avancée 2 jours"
-      badge-up: "26 <span>et</span> 27"
-      badge-down: "Novembre<br/>2020"
-
-    - link: "/formations/Formation-Ansible.html"
-      img: "/images/formations/ansible.png"
-      title: "Découvrir et maîtriser Ansible pour la production"
-      fulltitle: "Formation Ansible : 3 et 4 Décembre 2020 Paris"
-      short: "Formation Ansible 2 jours"
       badge-up: "3 <span>et</span> 4"
-      badge-down: "Décembre<br/>2020"
+      badge-down: "Février<br/>2021"
+
+    - link: "/formations/Formation-Terraform.html"
+      img: "/images/formations/terraform.png"
+      title: "Terraform"
+      fulltitle: "Formation Terraform : 9 et 10 Février 2021 Paris"
+      short: "Terraform 2 jours"
+      badge-up: "9 <span>et</span> 10"
+      badge-down: "Février<br/>2021"
 
     - link: "/formations/Formation-XL-Deploy.html"
       img: "/images/formations/xl-deploy.png"
       title: "XL Deploy"
-      fulltitle: "Formation XL Deploy : 8 et 10 Décembre 2020 Paris"
+      fulltitle: "Formation XL Deploy : 16 au 18 Février 2021 Paris"
       short: "Formation XL Deploy 3 jours"
-      badge-up: "8 <span>au</span> 10"
-      badge-down: "Décembre<br/>2020"
+      badge-up: "16 <span>au</span> 18"
+      badge-down: "Février<br/>2021"
 
-    - link: "/formations/Formation-Tech-for-PM.html"
-      img: "/images/formations/techforpm.png"
-      title: "Tech for PM"
-      fulltitle: "Formation Tech for PM : 10 et 11 Décembre 2020 Paris"
-      short: "Formation Tech for PM 2 jours"
-      badge-up: "10 <span>et</span> 11"
-      badge-down: "Décembre<br/>2020"
+    - link: "/formations/Formation-XL-Release.html"
+      img: "/images/formations/xl-release.png"
+      title: "XL Release"
+      fulltitle: "Formation XL Release : 24 et 25 Février 2021 Paris"
+      short: "Formation XL Release 2 jours"
+      badge-up: "24 <span>et</span> 25"
+      badge-down: "Février<br/>2021"
 
-    - link: "/formations/Formation-Devsecops.html"
-      img: "/images/formations/devsecops.png"
-      title: "Devsecops"
-      fulltitle: "Formation Devsecops : 17 et 18 Décembre 2020 Paris"
-      short: "Formation Devsecops 2 jours"
-      badge-up: "17 <span>et</span> 18"
-      badge-down: "Décembre<br/>2020"
+   - link: "/formations/Formation-Ansible.html"
+      img: "/images/formations/ansible.png"
+      title: "Découvrir et maîtriser Ansible pour la production"
+      fulltitle: "Formation Ansible : 8 et 9 Avril 2021 Paris"
+      short: "Formation Ansible 2 jours"
+      badge-up: "8 <span>et</span> 9"
+      badge-down: "Avril<br/>2021"
 
 ---
 
